syntax = "proto3";
package matcha.view.android;
// import "github.com/gomatcha/matcha/proto/image.proto";
// import "github.com/gomatcha/matcha/proto/text/text.proto";

option go_package = "android";
option objc_class_prefix = "MatchaAndroidPB";
option java_package = "com.github.gomatcha.matcha.proto.view.android";
option java_outer_classname = "PbPagerView";

message PagerChildView {
    string title = 2;
    // matcha.ImageOrResource icon = 3;
    // matcha.ImageOrResource selectedIcon = 4;
    // string badge = 5;
}

message PagerView {
    repeated PagerChildView childViews = 1;
    int64 selectedIndex = 2;
    // matcha.Color barColor = 3;
    // matcha.Color selectedColor = 6;
    // matcha.Color unselectedColor = 7;
    // matcha.text.TextStyle selectedTextStyle = 8;
    // matcha.text.TextStyle unselectedTextStyle = 9;
}

message PagerEvent {
    int64 selectedIndex = 1;
}
