syntax = "proto3";
package matcha.view;
import "github.com/gomatcha/matcha/proto/layout/layout.proto";

option go_package = "view";
option objc_class_prefix = "MatchaViewPB";
option java_package = "com.github.gomatcha.matcha.proto.view";
option java_outer_classname = "PbScrollView";

message ScrollView {
  bool scrollEnabled = 1;
  bool horizontal = 4;
  bool vertical = 5;
  bool showsHorizontalScrollIndicator = 2;
  bool showsVerticalScrollIndicator = 3;
}

message ScrollEvent {
    matcha.layout.Point contentOffset = 1;
}
